# xlang

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  LICENSE  NOTICE  Notes.md  README.md  X.cpp  X.h  XPython.cpp  XPython.h  cli.cpp  cli.h  test_func_api.x
API/: value.cpp  value.h  xhost.h
Android/: settings.gradle
Android/app/src/main/cpp/: CMakeLists.txt  androidApi.x  androidwrapper.cpp  androidwrapper.h  native-lib.cpp  readme.md  xlang.cpp
Api/: readme.md  value.cpp  value.h  xhost.h  xlang.h  xload.cpp  xload.h  xlog.h  xlstream.h  xpackage.h  xport.h  xproxy.h
Ast/: ALL_AST.cpp  InlineCall.cpp  InlineCall.h  await.cpp  await.h  block.cpp  block.h  blockstate.cpp  blockstate.h  decor.cpp  decor.h  dotop.cpp  dotop.h  exp.cpp  exp.h  feedop.cpp  feedop.h  func.cpp  func.h  inline_expr.cpp  inline_expr.h  jitblock.cpp  jitblock.h  lvalue.h  metascope.cpp  metascope.h  module.cpp  module.h  moduleProxy.h  namespace_var.cpp  namespace_var.h  number.cpp  number.h  op.cpp  op.h  pair.cpp  pair.h  pipeop.h  refop.h  sql.h  (+4 more)
BareLink/: CMakeLists.txt  SerialPort .h  SerialPort.cpp  SerialPort.h  barelink.h  device.cpp  device.h  main.cpp
BareLink/test/: pico_test.x  test101.x
Core/: ALL_CORE.cpp  action.cpp  action.h  attribute.h  bin.cpp  bin.h  block.cpp  block.h  blockstate.h  builtin.cpp  builtin.h  class_base.h  complex.cpp  complex.h  constexpr.cpp  constexpr.h  dbg.cpp  dbg.h  def.h  deferred_object.cpp  deferred_object.h  dict.cpp  dict.h  dotop.cpp  dotop.h  dyn_scope.h  error_obj.cpp  error_obj.h  exp.cpp  exp.h  expr_scope.h  extension_loader.h  func.cpp  func.h  funclist.h  function.cpp  function.h  glob.cpp  glob.h  import.cpp  (+70 more)
DevSrv/: CMakeLists.txt  devsrv.cpp  devsrv.h  ipc_impl.cpp  main.cpp  router.cpp  router.h  srv.cpp
DevSrv/DevSrv_Plugins/: test_plugin.x
Docs/: BUILD.md  DISTRIBUTED.md  EMBEDDING.md  EXAMPLES.md  GETTING_STARTED.md  Notes.md  TENSOR.md  Using XLang IPC to Enforce GPL 3.md  xlang-ipc.html  xlang-ipc.md  xlang_intro.md  xlang_intro_chs.md  xlang_spec.md
Encryption/: CMakeLists.txt  Enc.cpp  Enc.h
Executor/: exp_exec.cpp  exp_exec.h  exp_work.h
Ext/: Locker.cpp  Locker.h  ast.cpp  ast.h  ast_search.cpp  ast_search.h  devops.cpp  devops.h  event.cpp  event.h  fs.h  gthread.h  ipc.cpp  ipc.h  ipc_win.cpp  os.cpp  task.cpp  task.h  wait.cpp
Http/: CMakeLists.txt  curl_module.cpp  curl_module.h  cypher.cpp  cypher.h  cypher_help.cpp  cypher_help.h  http.cpp  http.h  httplib.h  main.cpp  smtp.cpp  smtp.h
Http/depends/windows/: README.md
Http/depends/windows/include/curl/: curl.h
Http/depends/windows/lib/: libapps.lib  libtestutil.lib
Http/depends/windows/lib/arm64/: zlib_static.lib
Http/depends/windows/lib/x64/: libssl.lib  zlib_static.lib
Http/python_test/: run_server.py  test_gil.py
Http/test/: curl_test.x  cypher_test.x  httpclient.x  route.x  service.x  smtp_test.x
Image/: CMakeLists.txt  main.cpp  utility.cpp  utility.h  xlFactory.h  xlImage.h
Image/dummy/: xlImage_dummy.cpp
Image/turbojpeg/: readme.md  xlImage_turbo.cpp
Image/turbojpeg/lib/: turbojpeg-static-vc32.lib  turbojpeg-static-vc64.lib
Image/win32/: xlImage_win.cpp
Inc/: PyEngHost.h  PyEngObject.h  base.h  objref.h  port.h  singleton.h  xlang.h  xlog.h  xpackage.h
Interop/: CMakeLists.txt  apibridge.cpp  apibridge.h  main.cpp  registry.cs  xlangloader.cs
Ipc/: Call.h  CallCounter.h  IpcBase.h  IpcPool.h  MsgService.cpp  MsgService.h  RemotingMethod.h  RemotingProxy.cpp  RemotingProxy.h  RemotingServer.cpp  RemotingServer.h  RemotingServerMgr.h  RemotingStub.h  SMSwapBuffer.cpp  SMSwapBuffer.h  SMSwapBuffer_POSIX.cpp  SMSwapBuffer_Win32.cpp  SwapBufferStream.cpp  SwapBufferStream.h  service_def.h
Jit/: compiler.cpp  compiler.h  cppcompiler.cpp  cppcompiler.h  jitlib.cpp  jitlib.h  md5.cpp  md5.h
Main/: ALL.cpp  AddScripts.cpp  AddScripts.h  CMakeLists.txt  DllEntry.cpp  EventLoopInThread.h  Hosting.cpp  Hosting.h  PyLoad.cpp  PyLoad.h  xhost_impl.cpp  xhost_impl.h
Net/: CMakeLists.txt  main.cpp  net.h  udp.h
Net/Test/: udp_client.x  udp_srv.x
Parse/: ALL_PARSE.cpp  Comprehension.cpp  action.cpp  action.h  def.h  fast_ops.h  lex.cpp  lex.h  op_registry.h  parser.cpp  parser.h  precedence.cpp  pycore.h  token.cpp  token.h
PyEng/: CMakeLists.txt  PyBinarySerializer.cpp  PyBinarySerializer.h  PyBind.cpp  PyBindImpl.cpp  PyEngHostImpl.cpp  PyEngHostImpl.h  PyFunc.cpp  PyFunc.h  PyGILState.h  PyHelpFuncs.cpp  PyHelpFuncs.h  PyObjectXLangConverter.h  PyTaskPool.h  PythonModulePathManager.cpp  PythonModulePathManager.h  PythonThreadPool.h  XlangLoad.cpp  XlangLoad.h  XlangObject.cpp  install_py_xlang.bat  install_py_xlang.sh  main.cpp  readme.md  update_python_lib.bat
RaspberryPi/XPico/: CMakeLists.txt  DeviceLoop.cpp  DeviceLoop.h  dummy.cpp  main.cpp  serial_port_bm.cpp  serial_port_bm.h
RaspberryPi/test/: CMakeLists.txt  test.cpp
WebCore/: CMakeLists.txt  HttpClient.cpp  HttpClient.h  HttpClient_Windows.cpp  WebCore.h  main.cpp  raw_websocket.cpp  raw_websocket.h  readme.md  websocket_srv.cpp  websocket_srv.h
Yaml/: CMakeLists.txt  main.cpp  yaml_api.cpp  yaml_api.h
Yaml/test/: agentflow.yml  debug_yaml.x  newfile.yml  test.json  test101.x  test_attr.x  test_comments.x  test_complex.x  test_dict.x  test_modify.x
algorithm/: CMakeLists.txt  alg.h  graph.cpp  graph.h  main.cpp  singleton.h
algorithm/test/: graph_test.x
all/: CMakeLists.txt  xone.cpp
os/: CMakeLists.txt  file.cpp  file.h  folder.cpp  folder.h  fs.cpp  fs.h  os.cpp  process.h  service.h  singleton.h  utils.h
os/test/: service_test.x  test101.x  test_fs_ops.x
sqlite/: CMakeLists.txt  dbmgr.cpp  dbmgr.h  dbop.cpp  dbop.h  main.cpp  port.h  singleton.h  utility.cpp  utility.h
sqlite/sqlite/: README.md
sqlite/test/: kv.x  sqlite-test-simple.py  sqlite-test.py  test101.x  test102.x
winner/: CMakeLists.txt  Locker.cpp  Locker.h  const_data.cpp  const_data.h  main.cpp  singleton.h  test.x  utility.cpp  utility.h  xlApp.cpp  xlApp.h  xlDraw.cpp  xlDraw.h  xlImage.cpp  xlImage.h  xlWindow.cpp  xlWindow.h
winner/test/: test.x
(+410 files in other folders)
